import userEvent from '@testing-library/user-event';
import { render, waitFor } from '@testing-library/vue';

import N8nActionDropdown from './ActionDropdown.vue';

describe('components', () => {
	describe('N8nActionDropdown', () => {
		it('should render default styling correctly', () => {
			const wrapper = render(N8nActionDropdown, {
				props: {
					items: [
						{
							id: 'item1',
							label: 'Action 1',
						},
						{
							id: 'item2',
							label: 'Action 2',
						},
					],
				},
				global: {
					stubs: ['N8nIcon', 'ElTooltip', 'N8nIconButton', 'N8nLoading', 'N8nBadge'],
				},
			});
			expect(wrapper.html()).toMatchSnapshot();
		});

		it('should render custom styling correctly', () => {
			const wrapper = render(N8nActionDropdown, {
				props: {
					items: [
						{
							id: 'item1',
							label: 'Action 1',
							icon: 'thumbs-up',
						},
						{
							id: 'item2',
							label: 'Action 2',
							icon: 'thumbs-down',
							disabled: true,
						},
						{
							id: 'item3',
							label: 'Action 3',
							icon: 'house',
							divided: true,
						},
					],
				},
				global: {
					stubs: ['N8nIcon', 'N8nIconButton', 'N8nLoading', 'N8nBadge'],
				},
			});
			expect(wrapper.html()).toMatchSnapshot();
		});

		it('should render items with badges', () => {
			const wrapper = render(N8nActionDropdown, {
				props: {
					items: [
						{
							id: 'item1',
							label: 'Action 1',
							badge: 'Pro',
							badgeProps: { variant: 'warning' },
							disabled: true,
						},
						{
							id: 'item2',
							label: 'Action 2',
						},
					],
				},
				global: {
					stubs: ['N8nIcon', 'N8nBadge', 'N8nIconButton', 'N8nLoading'],
				},
			});

			expect(wrapper.html()).toContain('action-dropdown-container');
		});

		it('forwards badge variants over the default variant', async function testBadgeVariants() {
			const wrapper = render(N8nActionDropdown, {
				props: {
					items: [
						{ id: 'default', label: 'Default', badge: 'Pro' },
						{
							id: 'custom',
							label: 'Custom',
							badge: 'Warning',
							badgeProps: { variant: 'warning' },
						},
					],
				},
			});

			await userEvent.click(wrapper.container.querySelector('button')!);

			await waitFor(function assertBadgeVariants() {
				const defaultBadge = wrapper.getByText('Pro').closest('.n8n-badge');
				const customBadge = wrapper.getByText('Warning').closest('.n8n-badge');
				expect(defaultBadge).toHaveClass('primary');
				expect(customBadge).toHaveClass('warning');
				expect(customBadge).not.toHaveClass('primary');
				expect(customBadge).not.toHaveAttribute('theme');
				expect(customBadge).not.toHaveAttribute('bold');
			});
		});

		it('should support badge-click event for disabled items with badges', () => {
			// This test verifies that the component has the badge-click emit defined
			// and accepts items with badge properties. The actual click interaction
			// is tested in integration tests (ProjectMembersRoleCell and ProjectMembersTable)
			// where the dropdown menu is opened and badges are clickable.
			const wrapper = render(N8nActionDropdown, {
				props: {
					items: [
						{
							id: 'disabled-item',
							label: 'Disabled Action',
							badge: 'Pro',
							disabled: true,
						},
					],
				},
			});

			// Verify component renders with badge properties
			expect(wrapper.html()).toContain('action-dropdown-container');

			// The component template has: @click.stop="item.disabled && $emit('badge-click', item.id)"
			// This ensures badge-click only emits for disabled items
		});

		it('should mark destructive items with the destructive class', async () => {
			const wrapper = render(N8nActionDropdown, {
				props: {
					items: [
						{ id: 'edit', label: 'Edit' },
						{ id: 'delete', label: 'Delete', variant: 'destructive' as const },
					],
				},
			});

			await userEvent.click(wrapper.container.querySelector('button')!);

			await waitFor(() => {
				const deleteItem = document.querySelector('[data-test-id="action-delete"]');
				expect(deleteItem?.className).toContain('destructive');

				const editItem = document.querySelector('[data-test-id="action-edit"]');
				expect(editItem?.className).not.toContain('destructive');
			});
		});

		it('should render footer content', async () => {
			const wrapper = render(N8nActionDropdown, {
				props: {
					items: [{ id: 'item1', label: 'Action 1' }],
				},
				slots: {
					footer: '<div>Footer content</div>',
				},
			});

			await userEvent.click(wrapper.container.querySelector('button')!);

			await waitFor(() => {
				expect(wrapper.getByText('Footer content')).toBeInTheDocument();
			});
		});

		it('should forward width to the dropdown menu', async () => {
			const wrapper = render(N8nActionDropdown, {
				props: {
					items: [{ id: 'item1', label: 'Action 1' }],
					width: '13rem',
				},
			});

			await userEvent.click(wrapper.container.querySelector('button')!);

			await waitFor(() => {
				const menu = document.querySelector<HTMLElement>('[role="menu"]');
				expect(menu?.style.getPropertyValue('--n8n--dropdown-menu-width')).toBe('13rem');
			});
		});
	});
});
